[tool.poetry]
name = "anymodality"
version = "0.1.0"
description = "Make running Multi-Modality Model easy"
authors = ["Joey ZHOU <greyjoeyzhou@gmail.com>", "GOU Yuchuan <>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
replicate = "^0.15.4"
gradio = "^3.50.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
